--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "Edutiek\\LEAS\\": "src"
+      "Edutiek\\LongEssayAssessmentService\\": "src"
     }
   },
   "require": {
