--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.1",
   "dependencies": {
     "long-essay-corrector": "github:EDUTIEK/long-essay-corrector",
-    "long-essay-writer": "github:EDUTIEK/long-essay-writer"
+    "long-essay-assessment-writer": "github:EDUTIEK/long-essay-assessment-writer"
   }
 }
