--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,17 @@
       "Edutiek\\LongEssayAssessmentService\\": "src"
     }
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/EDUTIEK/long-essay-pdf-converter"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/EDUTIEK/long-essay-image-sketch"
+    }
+
+  ],
   "require": {
     "php": "~7.4",
     "ext-json": "*",
@@ -21,9 +32,12 @@
     "ext-xml": "*",
     "ext-xsl": "*",
     "ext-curl": "*",
+    "edutiek/long-essay-pdf-converter": "dev-main",
+    "edutiek/long-essay-image-sketch": "dev-main",
+
+    "mustache/mustache": "^2.14",
     "slim/slim": "^3.11",
-    "yetanotherape/diff-match-patch": "^1.1",
     "tecnickcom/tcpdf": "^6.3",
-    "mustache/mustache": "^2.14"
+    "yetanotherape/diff-match-patch": "^1.1"
   }
 }
