--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.1",
   "dependencies": {
     "long-essay-assessment-corrector": "github:EDUTIEK/long-essay-assessment-corrector",
-    "long-essay-assessment-writer": "github:EDUTIEK/long-essay-assessment-writer#dev-a11y"
+    "long-essay-assessment-writer": "github:EDUTIEK/long-essay-assessment-writer#ally"
   }
 }
