Handle writer annotations

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.1",
   "dependencies": {
     "long-essay-assessment-corrector": "github:EDUTIEK/long-essay-assessment-corrector#main",
-    "long-essay-assessment-writer": "github:EDUTIEK/long-essay-assessment-writer#main"
+    "long-essay-assessment-writer": "github:EDUTIEK/long-essay-assessment-writer#dev-pdf"
   }
 }
